Fixes, tweaks. All windows close, and thus the whole program closes, when the main window is closed. UDP 'zeroconf' socket server accepts clients and can read data from them. File for testing the UDP client is listed.

--- a/EventDirector/EventDirector.csproj
+++ b/EventDirector/EventDirector.csproj
@@ -89,6 +89,7 @@
       <DependentUpon>ImportFileWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Log.cs" />
+    <Compile Include="NetCore.cs" />
     <Compile Include="NewDivisionWindow.xaml.cs">
       <DependentUpon>NewDivisionWindow.xaml</DependentUpon>
     </Compile>
@@ -100,8 +101,10 @@
       <DependentUpon>ParticipantsList.xaml</DependentUpon>
     </Compile>
     <Compile Include="SQLiteInterface.cs" />
+    <Compile Include="TempUdpThread.cs" />
     <Compile Include="TimeResult.cs" />
     <Compile Include="TimingPoint.cs" />
+    <Compile Include="ZeroConf.cs" />
     <Page Include="ImportFileWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
