Additions. Added code to start working on TCP server for communication with applications on tablets/phones.

--- a/EventDirector/EventDirector.csproj
+++ b/EventDirector/EventDirector.csproj
@@ -101,6 +101,7 @@
       <DependentUpon>ParticipantsList.xaml</DependentUpon>
     </Compile>
     <Compile Include="SQLiteInterface.cs" />
+    <Compile Include="TCPServer.cs" />
     <Compile Include="TempUdpThread.cs" />
     <Compile Include="TimeResult.cs" />
     <Compile Include="TimingPoint.cs" />
