Features, modifications. Adding the backend for the kiosk mode on tablets. Modifications to allow this to happen. Added a kiosk mode enabling option to the client. Ensured we can exit from the kiosk mode for an event. Added code to handle new json coming from the client and going to clients. Added to the database backend to accomodate information we require.

--- a/EventDirector/EventDirector.csproj
+++ b/EventDirector/EventDirector.csproj
@@ -318,6 +318,9 @@
     <Resource Include="Icons\plus-8x.png" />
     <Resource Include="Icons\trash-8x.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\tablet-8x.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.105.2\build\net46\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.105.2\build\net46\System.Data.SQLite.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
