Feature get. Added the option to print out day of registrant information automatically as they come in. You can also manually print a day of race registrant's information by selecting them in the list. Updated database to keep track of this information.

--- a/EventDirector/EventDirector.csproj
+++ b/EventDirector/EventDirector.csproj
@@ -171,6 +171,7 @@
     <Compile Include="ParticipantsList.xaml.cs">
       <DependentUpon>ParticipantsList.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Printerface.cs" />
     <Compile Include="SQLiteInterface.cs" />
     <Compile Include="TCPServer.cs" />
     <Compile Include="TempUdpThread.cs" />
